# PlanificacionHorarios

./: .gitignore  Makefile  main.cpp
ae/: CandidatoHorario.cpp  CandidatoHorario.h  Makefile  TGen.cpp  TGen.h  TIndividuo.cpp  TIndividuo.h  TIndividuoTest.cpp
ae/eda/: Makefile
eda/: Makefile  TAsignatura.cpp  TAsignatura.h  TAula.cpp  TAula.h  TAulaTest.cpp  TCostAsigProf.cpp  TCostAsigProf.h  TCostAsigProfTest.cpp  TCostHoraProf.cpp  TCostHoraProf.h  TCostHoraProfTest.cpp  TProfesor.cpp  TProfesorTest.cpp
interfaz/: CMainWindow.cpp
src/: CAdminWindow.cpp  CAdminWindow.h  CMainWindow.cpp  CMainWindow.h  CMakeLists.txt  CUserWindow.h  Makefile  Misc.cpp  Misc.h  create.sql  main.cpp
src/ae/: AlgoritmoEvolutivo.cpp  AlgoritmoEvolutivo.h  AlgoritmoEvolutivoTest.cpp  CMakeLists.txt  CandidatoHorario.cpp  CandidatoHorario.h  DataPackage.cpp  DataPackage.h  GeneradorDatos.cpp  GeneradorDatos.h  Makefile  TGen.h  TIndividuo.cpp  TIndividuo.h  TIndividuoTest.cpp  TIndividuoTest2  TIndividuoTest2.cpp
src/ae/eda/: CMakeLists.txt  TAsignatura.cpp  TAsignaturaTest.cpp  TCostAsigProf.cpp  TCostAsigProf.h  TCostAsigProfTest.cpp  TCostHoraProf.h  TCostHoraProfTest.cpp  TProfesor.cpp  TProfesor.h  TProfesorTest.cpp
src/interfaz/: CDBHandler.cpp  CDBHandler.h  CMainWindow.cpp  CMainWindow.h  CMakeLists.txt
